<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".permissions.activity.LocationPermissionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/dk_layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_permissions_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dk_margin"
                android:padding="@dimen/dk_margin"
                android:src="@drawable/dk_perm_utils_background_location_permission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_permission_location_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dk_margin"
                android:gravity="center"
                android:padding="@dimen/dk_margin"
                android:text="@string/dk_perm_utils_permissions_location_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_permissions_location" />


            <TextView
                android:id="@+id/text_view_location_permission_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dk_margin"
                android:padding="@dimen/dk_margin"
                android:text="@string/dk_perm_utils_permissions_location_text1_android"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_permission_location_title" />


            <TextView
                android:id="@+id/text_view_location_permission_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:paddingStart="@dimen/dk_margin"
                android:paddingEnd="@dimen/dk_margin"
                android:paddingBottom="@dimen/dk_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_location_permission_text1" />

            <Button
                android:id="@+id/button_request_location_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dk_margin"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:onClick="onRequestPermissionClicked"
                android:padding="@dimen/dk_margin"
                android:text="@string/dk_perm_utils_permissions_location_button_android"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_location_permission_text2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
